<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_shorts"
        android:icon="@drawable/ic_home_shorts_24dp"
        android:title="@string/title_shorts" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_baseline_subscriptions_24"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/title_library" />

</menu>