<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.youtube_clone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shorts"
        android:name="com.example.youtube_clone.ui.shorts.ShortsFragment"
        android:label="@string/title_shorts"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.youtube_clone.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.youtube_clone.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_create"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_library" />
</navigation>