<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="8dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/youtube_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/youtube_icon"
            android:focusable="true"
            android:src="@drawable/youtube"
            app:tint="@color/YoutubeThemeRed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/youtube"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/notifications_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/search_icon"
                android:layout_marginHorizontal="6dp"
                android:clickable="true"
                android:contentDescription="@string/notifications"
                android:focusable="true"
                android:src="@drawable/ic_notifications_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="6dp"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:focusable="true"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_icon_card_view"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_icon_card_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:elevation="0dp"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="150dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true">

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/channel_logo"
                    android:contentDescription="@string/profile"/>

            </androidx.cardview.widget.CardView>

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_marginHorizontal="6dp"-->
<!--                android:background="@drawable/profile_circle_background"-->
<!--                android:clickable="true"-->
<!--                android:contentDescription="@string/profile"-->
<!--                android:focusable="true"-->
<!--                android:padding="2dp"-->
<!--                android:src="@drawable/ic_baseline_person_24"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>