<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/video_item_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/sample_video_thumbnail"
        android:contentDescription="@string/video_thumbnail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_item_thumbnail"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/channel_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            app:cardCornerRadius="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/channel_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/channel_logo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/channel_logo"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OOPs | Java | Hindi"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/channel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coding Stag"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity=""
                    android:text=" . "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/video_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="436K views"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity=""
                    android:text=" . "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/video_upload_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2 months ago"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

<!--        <androidx.appcompat.widget.ActionMenuView-->
<!--            android:id="@+id/video_menu_options"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:menu="@menu/video_menu_options" />-->
        <ImageView
            android:id="@+id/video_menu_options"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/video_menu_options"
            android:focusable="true"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/item_end_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/grey"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>